k8s/ui-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-ui
  template:
    metadata:
      labels:
        app: app-ui
    spec:
      imagePullSecrets:
        - name: ghcr-creds
      containers:
      - name: ui-container
        image: ghcr.io/mayyyk/devops-ui:latest # in gh actions it's set to point to 'master' branch.

        # image: devops-ui:local # for local testing
        # imagePullPolicy: IfNotPresent # Use local, don't try to download

        ports:
        - containerPort: 8501 # Streamlit default port
