k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - http:
      paths:
      - path: / # All incoming traffic to port 80 - set in terraform 
        pathType: Prefix
        backend:
          service: # route to inner service called "ui-service"
            name: ui-service
            port:
              number: 8501 # port of ui-service
